--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -16,7 +16,8 @@ main{
     width: 500px;
     height: 550px;
     padding: 50px;
-    background-color: rgb(99, 99, 99);
+    background-color: rgb(53, 53, 53);
+    border-radius: 10px;
 }
 
 
@@ -32,7 +33,6 @@ main{
 .btn-contenedor{
     display: flex;
     justify-content: space-around;
-    align-items: center;
     
 
 }
@@ -52,7 +52,7 @@ main{
 
 
 .num-botones{
-    height: 30%;
+    height: 100%;
     display: grid;
     grid-template-columns: repeat(3,1fr);
     grid-template-rows: repeat(4,1fr);
